# notebooks

./: .gitignore
LightGBM予測モデル実装ハンドブック/: chapter2_1_eda.ipynb  chapter2_2_2_linear_regression.ipynb  chapter2_2_linear_regression_1.ipynb  chapter2_3_decision_tree_regressor.ipynb  chapter2_4_light_gbm.ipynb  chapter3_1_eda.ipynb  chapter3_2_logistic_regression.ipynb  chapter3_3_1_light_gbm.ipynb  chapter3_4_light_bgm.ipynb  chapter4_1_eda.ipynb  chapter4_2_linear_regression.ipynb  chapter4_3_light_gbm.ipynb  chapter4_4_light_gbm_feature_engineering.ipynb  chapter4_5_light_gbm_optuna.ipynb
uv-test/: feature_store.ipynb  pyproject.toml  test.ipynb
事例で学ぶ特徴量エンジニアリング/: Chapter_03.ipynb  Chapter_04.ipynb  Chapter_05.ipynb  Chapter_07.ipynb
