[project]
name = "uv-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hopsworks>=3.7.0",
    "hsfs[hive]>=2.5.17",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "pandas==2.1.4",
    "scikit-learn",
    "ydata-profiling>=4.9.0",
]
